syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ProductSupplierProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// Supplier Product
message SupplierProductData {
    option (routines.entity_type) = "SupplierProduct";
    option (routines.keys).keys = "product_id, party_id, available_from_date, minimum_order_quantity, currency_uom_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, partyId, currencyUomId, minimumOrderQuantity, availableFromDate
    // fields
    string product_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp available_from_date = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp available_thru_date = 4 [(routines.opts).field_type = "date-time"];
    string supplier_pref_order_id = 5 [(routines.opts).field_type = "id"];
    string supplier_rating_type_id = 6 [(routines.opts).field_type = "id"];
    routines.FixedPoint standard_lead_time_days = 7 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint minimum_order_quantity = 8 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint order_qty_increments = 9 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint units_included = 10 [(routines.opts).field_type = "fixed-point"];
    string quantity_uom_id = 11 [(routines.opts).field_type = "id"];
    string agreement_id = 12 [(routines.opts).field_type = "id"];
    string agreement_item_seq_id = 13 [(routines.opts).field_type = "id"];
    routines.Currency last_price = 14 [(routines.opts).field_type = "currency-precise"];
    routines.Currency shipping_price = 15 [(routines.opts).field_type = "currency-precise"];
    string currency_uom_id = 16 [(routines.opts).field_type = "id"];
    string supplier_product_name = 17 [(routines.opts).field_type = "name"];
    string supplier_product_id = 18 [(routines.opts).field_type = "id-long"];
    routines.Indicator can_drop_ship = 19 [(routines.opts).field_type = "indicator"];
    string comments = 20 [(routines.opts).field_type = "comment"];
    google.protobuf.Timestamp last_updated_tx_stamp = 21 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 22 [(routines.opts).field_type = "date-time"];
    string id = 23 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 31;
    map<string, google.protobuf.Any> attachments = 32;
}


message SupplierProductKey{
    string product_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string currency_uom_id = 3 [(routines.opts).field_type = "id"];
    routines.FixedPoint minimum_order_quantity = 4 [(routines.opts).field_type = "fixed-point"];
    google.protobuf.Timestamp available_from_date = 5 [(routines.opts).field_type = "date-time"];
}

message SupplierProductList{
    repeated SupplierProductData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListSupplierProducts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Supplier-specific product feature information
message SupplierProductFeatureData {
    option (routines.entity_type) = "SupplierProductFeature";
    option (routines.keys).keys = "party_id, product_feature_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: partyId, productFeatureId
    // fields
    string party_id = 1 [(routines.opts).field_type = "id"];
    string product_feature_id = 2 [(routines.opts).field_type = "id"];
    string description = 3 [(routines.opts).field_type = "name"];
    string uom_id = 4 [(routines.opts).field_type = "id"];
    string id_code = 5 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string id = 8 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 12;
    map<string, google.protobuf.Any> attachments = 13;
}


message SupplierProductFeatureKey{
    string party_id = 1 [(routines.opts).field_type = "id"];
    string product_feature_id = 2 [(routines.opts).field_type = "id"];
}

message SupplierProductFeatureList{
    repeated SupplierProductFeatureData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListSupplierProductFeatures` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


