syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ManufacturingBomExtraProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// Product To Part Rule
message ProductManufacturingRuleData {
    option (routines.entity_type) = "ProductManufacturingRule";
    option (routines.keys).keys = "rule_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: ruleId
    // fields
    string rule_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string product_id = 2 [(routines.opts).field_type = "id"];
    string product_id_for = 3 [(routines.opts).field_type = "id"];
    string product_id_in = 4 [(routines.opts).field_type = "id"];
    string rule_seq_id = 5 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 6 [(routines.opts).field_type = "date-time"];
    string product_id_in_subst = 7 [(routines.opts).field_type = "id"];
    string product_feature = 8 [(routines.opts).field_type = "id"];
    string rule_operator = 9 [(routines.opts).field_type = "id"];
    double quantity = 10 [(routines.opts).field_type = "floating-point"];
    string description = 11 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp thru_date = 12 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 13 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 14 [(routines.opts).field_type = "date-time"];
    string tenant_id = 15 [(routines.opts).field_type = "id"];
            
             

    // extra
    google.protobuf.Struct extra = 22;
    map<string, google.protobuf.Any> attachments = 23;
}


message ProductManufacturingRuleKey{
    string rule_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ProductManufacturingRuleList{
    repeated ProductManufacturingRuleData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductManufacturingRules` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


